tests/ui/hygiene/hygienic-label-4.stderr
error[E0426]: use of undeclared label `'x`
  --> $DIR/hygienic-label-4.rs:6:16
   |
LL |     foo!(break 'x);
   |                ^^ undeclared label `'x`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0426`.
